--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "lucide-react": "^0.468.0",
     "next": "14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "lucide-react": "^0.468.0"
+    "viem": "^2.46.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "20.16.11",
